Add skeleton code of factory service and factory model

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -12,6 +12,7 @@
         This sidenav is locked open on your device. To go back to the default behavior,
         narrow your display.
       </p>
+      <factory-list></factory-list>
     </md-content>
   </md-sidenav>
   <md-content flex layout-padding>
