Show application list of selected factory.

--- a/app/factory-app/template/factory-app.html
+++ b/app/factory-app/template/factory-app.html
@@ -1,3 +1,14 @@
 <div>
-  <h1>Selected Factory: ccc</h1>
+  <h1>Selected Factory:{{selectedFactory.name}}</h1>
+  <md-content>
+    <md-list>
+      <md-subheader class="md-no-sticky">Application List</md-subheader>
+       <md-list-item class="md-3-line" *ngFor="#app of selectedAppList">
+           <div class="md-list-item-text" layout="column">
+             <h3>{{app}}</h3>
+           </div>
+           <button md-raised-button class="md-accent md-hue-1">Check</button>
+       </md-list-item>
+    </md-list>
+  </md-content>
 </div>
