--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -2,7 +2,7 @@
   <md-sidenav-container layout="row" flex>
   <md-sidenav name="left" [style]="hasMedia('gt-sm') ? 'side' : 'over'">
     <md-toolbar class="md-theme-indigo">
-      <h1 class="md-toolbar-tools">Sidenav Left</h1>
+      <h1 class="md-toolbar-tools">Factory List</h1>
     </md-toolbar>
     <md-content layout-padding>
       <button md-raised-button (click)="close('left')" class="md-primary" hide-gt-md>
