--- a/app/factory/template/factory.html
+++ b/app/factory/template/factory.html
@@ -2,7 +2,7 @@
   <md-content>
     <md-list>
       <md-list-item *ngFor="#factory of factories">
-          <button md-button (click)="loadFactory(factory)">{{factory.name}}</button>
+          <button md-button (click)="onSelectFactory(factory)">{{factory.name}}</button>
           <md-divider></md-divider>
       </md-list-item>
     </md-list>
