--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -8,13 +8,13 @@
       <button md-raised-button (click)="close('left')" class="md-primary" hide-gt-md>
         Close Sidenav Left
       </button>
+      <factory-list (showFactory)="selectedFactory = $event"></factory-list>
       <!--
       <p hide-md show-gt-md>"
         This sidenav is locked open on your device. To go back to the default behavior,
         narrow your display.
       </p>
       -->
-      <factory-list (showFactory)="selectedFactory = $event"></factory-list>
     </md-content>
   </md-sidenav>
   <md-content flex layout-padding>
@@ -38,7 +38,7 @@
               class="md-primary" hide-gt-md>
         Toggle left
       </button>
-      <factory-app-list  [selectedFactory]="selectedFactory"></factory-app-list>
+      <router-outlet></router-outlet>
       <!--
       <button md-raised-button (click)="open('right')"
               [hidden]="rightOpened"
