Add back button to app detail page.

--- a/app/factory-app-detail/template/app-detail.html
+++ b/app/factory-app-detail/template/app-detail.html
@@ -19,7 +19,9 @@
       </md-list>
     </md-content>
   </div>
+  <button md-raised-button class="md-accent md-hue-1" (click)="onReturn(appDetail)">Back</button>
 </div>
 <div [hidden]="appDetail">
    Application Detail is unavailable.
+   <button md-raised-button class="md-accent md-hue-1" (click)="onReturn(null)">Back</button>
 </div>
