Create skeleton database component.

--- a/app/factory-app/template/app-list.html
+++ b/app/factory-app/template/app-list.html
@@ -1,4 +1,4 @@
-<div>
+<!--div-->
   <h1>Selected Factory:{{selectedFactory.name}}</h1>
   <md-content>
     <md-subheader class="md-no-sticky">Application List</md-subheader>
@@ -19,4 +19,4 @@
      </tbody>
     </md-data-table>
   </md-content>
-</div>
+<!--div-->
