--- a/app/factory-app/template/database-list.html
+++ b/app/factory-app/template/database-list.html
@@ -1,5 +1,5 @@
 
-<div>
+<!--div-->
   <md-content>
     <md-subheader class="md-no-sticky">Database List</md-subheader>
     <md-data-table layout-fill>
@@ -21,4 +21,4 @@
      </tbody>
      </md-data-table>
   </md-content>
-</div>
+<!--div-->
