1) Move selected factory to factory summary component 2) Add back button in database page.

--- a/app/factory-app-detail/template/app-detail.html
+++ b/app/factory-app-detail/template/app-detail.html
@@ -22,6 +22,8 @@
   <button md-raised-button class="md-accent md-hue-1" (click)="onReturn(appDetail)">Back</button>
 </div>
 <div [hidden]="appDetail">
-   Application Detail is unavailable.
+   <div>
+     Application Detail is unavailable.
+   </div>
    <button md-raised-button class="md-accent md-hue-1" (click)="onReturn(null)">Back</button>
 </div>
