--- a/app/factory-app/template/factory-summary.html
+++ b/app/factory-app/template/factory-summary.html
@@ -1,4 +1,7 @@
 <div>
-  <app-list></app-list>
-  <database-list></database-list>
+  <h1>Selected Factory:{{selectedFactory.name}}</h1>
+  <md-content>
+    <app-list></app-list>
+    <database-list></database-list>
+  </md-content>
 </div>
