--- a/app/factory-app/template/database-list.html
+++ b/app/factory-app/template/database-list.html
@@ -14,7 +14,7 @@
          <td class="md-text-cell">{{ db.id }}</td>
          <td class="md-text-cell">{{ db.name }}</td>
          <td class="md-text-cell">{{ db.type }}</td>
-         <td><button md-raised-button class="md-accent md-hue-1" (click)="onSelectDBInstance(db.id)">Check</button></td>
+         <td><button md-raised-button class="md-accent md-hue-1" (click)="onSelectDBInstance(db)">Check</button></td>
        </tr>
      </tbody>
      </md-data-table>
