Render donut chart to display database schema hard disk consumption.

--- a/app/factory-database/template/database.html
+++ b/app/factory-database/template/database.html
@@ -5,7 +5,7 @@
     <h3>DB Type: {{dbInstance.type}}</h3>
   </div>
   <div>
-      <pie-chart></pie-chart>
+      <pie-chart [dbId]="dbId" [factory]="factory" ></pie-chart>
   </div>
   <button md-raised-button class="md-accent md-hue-1" (click)="onReturn(dbInstance)">Back</button>
 </div>
