--- a/app/factory-database/template/schema-disk-usage-chart.html
+++ b/app/factory-database/template/schema-disk-usage-chart.html
@@ -1,7 +1,8 @@
-<h2>Hard Disk Usage of Database (GB)</h2>
+<h4>Hard Disk Usage of Database (GB)</h4>
 <base-chart class="chart"
            [data]="pieChartData"
            [labels]="pieChartLabels"
            [chartType]="pieChartType"
+           [legend]="true"
            (chartHover)="chartHovered($event)"
            (chartClick)="chartClicked($event)"></base-chart>
