Fix syntax error and typos

--- a/app/factory-database/template/schema-stat-chart.html
+++ b/app/factory-database/template/schema-stat-chart.html
@@ -1,4 +1,4 @@
-<h4>Scheam Object Statistics</h4>
+<h4>Schema Object Statistics</h4>
 <base-chart class="chart"
            [data]="barChartData"
            [labels]="barChartLabels"
