Remove "selected" from label.

--- a/app/factory-system/template/factory-summary.html
+++ b/app/factory-system/template/factory-summary.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Selected Factory:&nbsp;&nbsp;{{selectedFactory.name}}</h2>
+  <h2>Factory:&nbsp;&nbsp;{{selectedFactory.name}}</h2>
   <h3>Country:&nbsp;&nbsp;{{selectedFactory.country}}</h3>
 
   <md-radio-group [(value)]="data.viewMode" layout="row" #group1
