Inject singleton database list service in bootstrap file.
show db storage size in ui

--- a/app/factory-database/template/database.html
+++ b/app/factory-database/template/database.html
@@ -2,6 +2,7 @@
 <div [hidden]="!dbInstance">
   <div>
     <h3>Name: {{dbInstance.name}} / DB Type: {{dbInstance.type}}</h3>
+    <h3>Total Space (GB): {{dbInstance.storage}}</h3>
   </div>
   <div>
       <schema-usage-chart [dbId]="dbId" [factory]="factory" ></schema-usage-chart>
