--- a/app/factory-system/template/app-list.html
+++ b/app/factory-system/template/app-list.html
@@ -12,7 +12,7 @@
        <tr *ngFor="#app of selectedAppList">
          <td class="md-text-cell">{{ app.id }}</td>
          <td class="md-text-cell">{{ app.name }}</td>
-         <td><button md-raised-button class="md-accent md-hue-1" (click)="onSelectApp(app.id)">Check</button></td>
+         <td><button md-raised-button class="md-accent md-hue-1" (click)="onSelectApp(app)">Check</button></td>
        </tr>
        <br />
      </tbody>
