--- a/app/factory-system/template/database-list.html
+++ b/app/factory-system/template/database-list.html
@@ -6,7 +6,7 @@
          <th class="md-text-cell">Id</th>
          <th class="md-text-cell">Database Instance</th>
          <th class="md-text-cell">Database Type</th>
-         <th class="md-text-cell">Storage</th>
+         <th class="md-text-cell">Storage (GB)</th>
          <th class="md-text-cell">&nbsp;</th>
        </tr>
      </thead>
