Add hardware list skeleton template, service and component.  Bootstrap HardwareListService

--- a/app/factory-system/template/factory-summary.html
+++ b/app/factory-system/template/factory-summary.html
@@ -14,5 +14,7 @@
         [refresh]="visible.application"></app-list>
       <database-list [hidden]="!visible.database"
           [refresh]="visible.database"></database-list>
+      <hardware-list [hidden]="!visible.hardware"
+              [refresh]="visible.hardware"></hardware-list>
   </md-content>
 </div>
