Add dummy virtual machine list page.

--- a/app/factory-system/template/factory-summary.html
+++ b/app/factory-system/template/factory-summary.html
@@ -16,5 +16,7 @@
           [refresh]="visible.database"></database-list>
       <hardware-list [hidden]="!visible.hardware"
               [refresh]="visible.hardware"></hardware-list>
+      <virtual-machine-list [hidden]="!visible.vm"
+              [refresh]="visible.vm"></virtual-machine-list>
   </md-content>
 </div>
