Replace #variable in *ngFor with let.
map ng2-charts

--- a/app/factory-system/template/app-list.html
+++ b/app/factory-system/template/app-list.html
@@ -10,7 +10,7 @@
        </tr>
      </thead>
      <tbody>
-       <tr *ngFor="#app of selectedAppList">
+       <tr *ngFor="let app of selectedAppList">
          <td class="md-text-cell">{{ app.id }}</td>
          <td class="md-text-cell">{{ app.name }}</td>
          <td class="md-text-cell">{{ app.appType }}</td>
