--- a/app/factory-list/template/factory-list.html
+++ b/app/factory-list/template/factory-list.html
@@ -1,8 +1,10 @@
 <div>
   <md-content>
     <md-list>
-      <md-list-item *ngFor="#factory of factories">
-          <button md-button (click)="onSelectFactory(factory)">{{factory.name}} ({{factory.country}})</button>
+      <md-list-item *ngFor="let factory of factories">
+          <button md-raised-button class="md-accent md-hue-1"(click)="onSelectFactory(factory)">
+            {{factory.name}} ({{factory.country}})
+          </button>
           <md-divider></md-divider>
       </md-list-item>
     </md-list>
