Add condition dropdown.

--- a/app/factory-system/template/app-list.html
+++ b/app/factory-system/template/app-list.html
@@ -1,5 +1,5 @@
   <md-content>
-    <md-subheader class="md-no-sticky">Application List</md-subheader>
+    <md-subheader flex class="md-no-sticky">Application List</md-subheader>
     <md-data-table layout-fill>
       <thead>
         <tr>
