--- a/app/factory-system/template/app-list.html
+++ b/app/factory-system/template/app-list.html
@@ -1,5 +1,10 @@
   <md-content>
-    <md-subheader flex class="md-no-sticky">Application List</md-subheader>
+    <div layout="row">
+      <md-subheader flex class="md-no-sticky">Application List</md-subheader>
+      <md-pagination name="app" flex="40" [model]="pagination"
+        (on-pagination-change)="detectChange($event)"
+        [items-per-page-options]="availableLength"></md-pagination>
+    </div>
     <md-data-table layout-fill>
       <thead>
         <tr>
@@ -10,7 +15,7 @@
        </tr>
      </thead>
      <tbody>
-       <tr *ngFor="let app of selectedAppList">
+       <tr *ngFor="let app of pagedAppList">
          <td class="md-text-cell">{{ app.id }}</td>
          <td class="md-text-cell">{{ app.name }}</td>
          <td class="md-text-cell">{{ app.appType }}</td>
@@ -19,4 +24,9 @@
        <br />
      </tbody>
     </md-data-table>
+    <div layout="row">
+      <span flex></span>
+      <md-pagination name="app" flex="40" [model]="pagination" (on-pagination-change)="detectChange($event)"
+        [items-per-page-options]="availableLength"></md-pagination>
+    </div>
   </md-content>
