--- a/app/factory-system/template/factory-summary.html
+++ b/app/factory-system/template/factory-summary.html
@@ -11,8 +11,7 @@
   </md-radio-group>
    <md-content>
       <app-list [hidden]="!visible.application"></app-list>
-      <database-list [hidden]="!visible.database"
-          [refresh]="visible.database"></database-list>
+      <database-list [hidden]="!visible.database"></database-list>
       <hardware-list [hidden]="!visible.hardware"
               [refresh]="visible.hardware"></hardware-list>
       <virtual-machine-list [hidden]="!visible.vm"
