--- a/app/factory-system/template/hardware-list.html
+++ b/app/factory-system/template/hardware-list.html
@@ -1,6 +1,12 @@
 <md-content>
     <div layout="row">
-    <md-subheader flex class="md-no-sticky">Hardware List</md-subheader>
+      <md-subheader flex class="md-no-sticky">Hardware List</md-subheader>
+      <md-pagination name="hardware" flex="40" [model]="pagination"
+          (on-pagination-change)="detectChange($event)"
+          [items-per-page-options]="availableLength"></md-pagination>
+    </div>
+    <div layout="row">
+      <span flex></span>
       <select flex="20">
           <option *ngFor="let c of condition" value="{{c}}">{{c}}</option>
       </select>
@@ -17,7 +23,7 @@
        </tr>
      </thead>
      <tbody>
-       <tr *ngFor="let hardware of hardwareList">
+       <tr *ngFor="let hardware of pagedHardwareList">
          <td class="md-text-cell">{{ hardware.id }}</td>
          <td class="md-text-cell">{{ hardware.name }}</td>
          <td class="md-text-cell">{{ hardware.manufacturer }}</td>
@@ -28,4 +34,9 @@
        <br/>
      </tbody>
      </md-data-table>
+     <div layout="row">
+       <span flex></span>
+       <md-pagination name="hardware" flex="40" [model]="pagination" (on-pagination-change)="detectChange($event)"
+         [items-per-page-options]="availableLength"></md-pagination>
+     </div>
   </md-content>
