upgrade to rc 3.
Signed-off-by: Connie Leung <cleung334@gmail.com>

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -1,6 +1,6 @@
 <div layout="column" style="height:700px;">
-  <md-sidenav-layout>
-  <md-sidenav name="left" [style]="hasMedia('gt-sm') ? 'side' : 'over'" #left [opened]="true" mode="side">
+  <md-sidenav-layout style="height:700px;">
+  <md-sidenav name="left" #left [opened]="true" mode="side">
     <md-toolbar class="md-theme-indigo">
       <h1 class="md-toolbar-tools">Factory List</h1>
     </md-toolbar>
